simple calc finished

--- a/reactNativeCalc/app.json
+++ b/reactNativeCalc/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jjhbotache.reactNativeCalc"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e09d1dff-3b69-42c9-9123-d3962602c394"
+      }
     }
   }
 }
